--- a/Chronos/src/main/res/drawable/button_ripple.xml
+++ b/Chronos/src/main/res/drawable/button_ripple.xml
@@ -9,7 +9,7 @@
         </shape>
     </item>
 
-    <item android:id="@android:id/background">
+    <item >
         <shape android:shape="rectangle">
             <gradient
                 android:angle="90"
